# func-hooks

./: .pre-commit-config.yaml  README.md  pyproject.toml
func_hooks/: __init__.py  sync.py
tests/: test_async.py  test_decorator.py  test_descriptors.py  test_sync.py
