[tool.poetry]
name = "func-hooks"
version = "0.1.0"
description = ""
authors = ["Francisco Del Roio <francipvb@hotmail.com>"]
readme = "README.md"
packages = [{ include = "func_hooks" }]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
anyio = "^3.6.2"
pylint = "^2.15.10"
ruff = "^0.0.224"
black = "^22.12.0"
mypy = "^0.991"
autoflake = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
